#Feature #Test #pair[scl113, abc56] Wrote cypress tests for the skills input. Also made the skills input filter existing skills from the autocomplete. Fixed backspacing deleting a key early and form not clearing fully

--- a/portfolio/src/main/resources/static/css/evidencePage.css
+++ b/portfolio/src/main/resources/static/css/evidencePage.css
@@ -215,6 +215,7 @@
 #tagInputChips {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .noDisplayInput {
